cmake_minimum_required(VERSION 2.8)

PROJECT(SqlHighlighterDemo)
 
if (NOT CMAKE_BUILD_TYPE STREQUAL "Release") 
	SET(CMAKE_BUILD_TYPE Debug) 
endif(NOT CMAKE_BUILD_TYPE STREQUAL "Release")

SET(CMAKE_CXX_FLAGS "-Wall")

FIND_PACKAGE( Qt4 REQUIRED )
set(CMAKE_AUTOMOC ON)

INCLUDE( ${QT_USE_FILE} )

ADD_SUBDIRECTORY(../src src)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../src
    ${CMAKE_CURRENT_BINARY_DIR}
) 

SET( SOURCES
    main.cpp
)

ADD_EXECUTABLE( demo ${SOURCES} )
TARGET_LINK_LIBRARIES( demo ${QT_LIBRARIES} tokenizer )
